@@ -63,20 +63,6 @@ $tpl->assign(
 			)
 		);
 
-function gen_page_awstats(&$tpl) {
-	$awstats_act = Config::get('AWSTATS_ACTIVE');
-	if ($awstats_act != 'yes') {
-		$tpl->assign('ACTIVE_AWSTATS', '');
-	} else {
-		$tpl->assign(
-			array(
-				'AWSTATS_PATH' => 'http://' . $_SESSION['user_logged'] . '/stats/',
-				'AWSTATS_TARGET' => '_blank'
-				)
-			);
-	}
-}
-
 // dynamic page data.
 
 send_backup_restore_request($sql, $_SESSION['user_id']);
@@ -87,8 +73,6 @@ gen_client_mainmenu($tpl, Config::get('CLIENT_TEMPLATE_PATH') . '/main_menu_webt
 gen_client_menu($tpl, Config::get('CLIENT_TEMPLATE_PATH') . '/menu_webtools.tpl');
 
 gen_logged_from($tpl);
-
-gen_page_awstats($tpl);
 
 check_permissions($tpl);
 
