@@ -269,27 +269,12 @@ function delete_user_from_group(&$tpl, &$sql, &$dmn_id) {
 	}
 }
 
-function gen_page_awstats(&$tpl) {
-	$awstats_act = Config::get('AWSTATS_ACTIVE');
-	if ($awstats_act != 'yes') {
-		$tpl->assign('ACTIVE_AWSTATS', '');
-	} else {
-		$tpl->assign(
-			array(
-				'AWSTATS_PATH' => 'http://' . $_SESSION['user_logged'] . '/stats/',
-				'AWSTATS_TARGET' => '_blank'
-				)
-			);
-	}
-}
 // ** end of funcfions
 
 gen_client_mainmenu($tpl, Config::get('CLIENT_TEMPLATE_PATH') . '/main_menu_webtools.tpl');
 gen_client_menu($tpl, Config::get('CLIENT_TEMPLATE_PATH') . '/menu_webtools.tpl');
 
 gen_logged_from($tpl);
-
-gen_page_awstats($tpl);
 
 check_permissions($tpl);
 
